Centering all the rows but the last one...(((

--- a/WordsCloudGenerator/Base.lproj/Main.storyboard
+++ b/WordsCloudGenerator/Base.lproj/Main.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,11 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WordsCloudGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8oh-Iq-nna" customClass="WordsCloud" customModule="WordsCloudGenerator" customModuleProvider="target">
-                                <rect key="frame" x="15" y="103.5" width="570" height="393"/>
+                                <rect key="frame" x="41.5" y="339" width="331" height="228"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8oh-Iq-nna" secondAttribute="height" multiplier="187:129" id="3i6-Zs-XEY"/>
@@ -25,7 +26,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="8oh-Iq-nna" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="8vs-X2-FOO"/>
-                            <constraint firstItem="8oh-Iq-nna" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.95" id="dWJ-z5-nMl"/>
+                            <constraint firstItem="8oh-Iq-nna" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="dWJ-z5-nMl"/>
                             <constraint firstItem="8oh-Iq-nna" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="tft-ig-gqb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
